# TinyverseGP

./: .gitignore  Collaborators.md  README.md  Roadmap.md  blif.py  changelog.txt  poetry.toml  pyproject.toml  requirements-llm.txt  requirements-py3.10.txt  requirements-py3.13.txt  requirements.txt  test_cgp.py  test_cgp_ls.py  test_srbench.py  test_tgp.py
backup/: tiny_cgp.py  tiny_gp.py  tinyverse.py
examples/: test_cgp.py  test_cgp_ls.py  test_srbench.py  test_tgp.py
examples/checkpoint/logic_ge/: checkpoint_gen_10.dill  checkpoint_gen_20.dill  checkpoint_gen_30.dill  checkpoint_gen_40.dill  (+5 more)
examples/checkpointing/: test_cgp_checkpointing.py
examples/hpo/: test_cgp_sr.py  test_hpo_cgp_sr.py  test_tgp_sr.py
examples/logic_synthesis/: test_cgp_ls.py  test_ge_ls.py  test_lgp_ls.py  test_llm_ls.py  test_tgp_ls.py
examples/old/: test_cgp.py  test_cgp_ls.py  test_tgp.py
examples/policy_learning/: test_cgp_pl.py  test_cgp_pl_ale.py  test_ge_pl.py  test_lgp_pl.py  test_tgp_pl.py
examples/program_synthesis/: test_cgp_ps.py  test_ge_ps.py  test_llm_ps.py  test_tgp_ps.py
examples/symbolic_regression/: test_cgp_sr.py  test_ge_sr.py  test_hpo_cgp_sr.py  test_lgp_sr.py  test_llm_sr.py  test_srbench.py  test_tgp_sr.py
src/: tiny_cgp.py  tiny_gp.py  tinyverse.py
src/backup/: tiny_cgp.py  tiny_gp.py
src/benchmark/: benchmark.py
src/examples/: blif.py
src/gp/: __init__.py  functions.py  loss.py  problem.py  tiny_cgp.py  tiny_ge.py  tiny_gp.py  tiny_lgp.py  tiny_tgp.py  tinyverse.py  types.py
src/hpo/: hpo.py
src/llm/: llm.py  tiny_llm.py
(+46 files in other folders)
