# TinyverseGP
# License: GPL-3.0-or-later

[project]
    name = "tinyversegp"
    version = "0.1.0"
    description = "Minimalistic implementations of different representations for Genetic Programming"
    authors = [
        { name = "Marie A." },
        { name = "Roman Kalkreuth" },
        { name = "Fabricio Olivetti de Franca" },
        { name = "Dominik Sobania" },
        { name = "Giovanni Squillero" },
        { name = "Alberto Tonda" },
        { name = "Zdenek Vasicek" },
    ]
    license = { text = "GPL-3.0-or-later" }
    readme = "README.md"
    requires-python = ">=3.11"
    dependencies = [
        "box2d (>=2.3.10,<3.0.0)",
        "pygame (>=2.6.1,<3.0.0)",
        "gymnasium (>=1.0.0,<2.0.0)",
        "numpy (>=2.1,<3.0.0)",
        "dd (>=0.6.0,<0.7.0)",
        "swig (>=4.3,<5.0.0)",
        "sympy (>=1.13,<2.0.0)",
        "requests (>=2.32,<3.0.0)",
        "opencv-python (>=4.11,<5.0.0.0)",
        "ale_py (>=0.10.1,<2)",
        "icecream (>=2.1.5,<3.0.0)",
    ]

[tool.poetry]
    packages = [{ include = "gp", from = "src" }]

[build-system]
    requires      = ["poetry-core>=2.0.0,<3.0.0"]
    build-backend = "poetry.core.masonry.api"
